--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="robots" content="noindex, nofollow">
 
     <link rel="stylesheet" href="https://use.typekit.net/lpp1fgl.css">
-    <link rel="stylesheet" href="/stylesheets/general.css">
-    <link rel="stylesheet" href="/stylesheets/header.css">
-    <link rel="stylesheet" href="/stylesheets/hero-section.css">
-    <link rel="stylesheet" href="/stylesheets/intro-section.css">
-    <link rel="stylesheet" href="/stylesheets/example-projects-section.css">
-    <link rel="stylesheet" href="/stylesheets/trusted-by-section.css">
+    <link rel="stylesheet" href="stylesheets/general.css">
+    <link rel="stylesheet" href="stylesheets/header.css">
+    <link rel="stylesheet" href="stylesheets/hero-section.css">
+    <link rel="stylesheet" href="stylesheets/intro-section.css">
+    <link rel="stylesheet" href="stylesheets/example-projects-section.css">
+    <link rel="stylesheet" href="stylesheets/trusted-by-section.css">
   </head>
   <body>
     <header>
