--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <meta name="robots" content="noindex, nofollow">
 
     <link rel="stylesheet" href="https://use.typekit.net/lpp1fgl.css">
-    <link rel="stylesheet" href="/stylesheets/general.css">
-    <link rel="stylesheet" href="/stylesheets/header.css">
-    <link rel="stylesheet" href="/stylesheets/hero-section.css">
-    <link rel="stylesheet" href="/stylesheets/intro-section.css">
-    <link rel="stylesheet" href="/stylesheets/example-projects-section.css">
-    <link rel="stylesheet" href="/stylesheets/trusted-by-section.css">
+    <link rel="stylesheet" href="stylesheets/general.css">
+    <link rel="stylesheet" href="stylesheets/header.css">
+    <link rel="stylesheet" href="stylesheets/hero-section.css">
+    <link rel="stylesheet" href="stylesheets/intro-section.css">
+    <link rel="stylesheet" href="stylesheets/example-projects-section.css">
+    <link rel="stylesheet" href="stylesheets/trusted-by-section.css">
   </head>
   <body>
     <header>
       <div class="header-flexbox">
-        <img class="logo" src="/graphics/logo.svg" alt="ISOv8">
+        <img class="logo" src="graphics/logo.svg" alt="ISOv8">
 
         <div class="cta-hamburger-flexbox">
           <a class="cta" href="#">Enquire</a>
@@ -27,7 +27,7 @@
             <div class="hamburger-divides"></div>
           </div>
 
-          <script src="/scripts/dropdownmenu.js"></script>
+          <script src="scripts/dropdownmenu.js"></script>
 
         </div>
         </div>
@@ -92,19 +92,19 @@
 
         <div class="hero-container">
           <div class="hero-flexbox">
-            <img class="hero-logo" src="/graphics/v-logo.svg" alt="ISOv8 logo mark">
+            <img class="hero-logo" src="graphics/v-logo.svg" alt="ISOv8 logo mark">
 
             <h1 class="hero-heading">Bespoke Shipping Container Conversions</h1>
           </div>
         </div>
 
-        <video class="hero-banner" autoplay="" loop="" playsinline="" muted="" src="/production-images/banner.mov"></video>
+        <div style="position:relative; width:100%; height:0px; padding-bottom:75.000%"><iframe allow="fullscreen;autoplay" allowfullscreen height="100%" src="https://streamable.com/e/xzu1wy?autoplay=1&muted=1&nocontrols=1" width="100%" style="border:none; width:100%; height:100%; position:absolute; left:0px; top:0px; overflow:hidden; z-index: -1;"></iframe></div>
       </section>
 
       <section id="intro">
 
       <div class="intro-heading-flexbox">
-        <img class="intro-logo" src="/graphics/v-logo-colour.svg" alt="ISOv8 logo mark">
+        <img class="intro-logo" src="graphics/v-logo-colour.svg" alt="ISOv8 logo mark">
         <h2 class="intro-heading">What&rsquo;s ISOv8?</h2>
       </div>
 
@@ -114,7 +114,7 @@
         <p class="intro-copy">
           ISOv8&reg; is a UK&hyphen;based specialist division of <a href="https://www.containerking.co.uk/">ContainerKing&reg; Limited</a>, focused on designing, manufacturing, and installing high-quality, bespoke shipping container conversions. Operating out of Scunthorpe, the company serves clients across England, Scotland, and Wales with both new and refurbished ISO containers.<br><br>Their customised solutions include container offices, workshops, canteens, gyms, meeting rooms, podcast studios, and modular classroom pods. Each unit can be fitted with insulation, acoustic treatments, LED lighting, luxury interiors, external cladding, and either single- or three-phase electrics—tailored to the specific requirements of each client.<br><br>ISOv8&reg; works with a wide range of customers, from SMEs and construction companies to schools, training centres, and blue-chip firms. Notable clients include ArcelorMittal, Exolum, and Mondi, reflecting the brand&rsquo;s reputation for quality and reliability.<br><br>The company prides itself on expert consultation, rapid project turnaround, dependable UK&hyphen;wide delivery, and a strong commitment to providing smart, innovative, and durable portable building solutions.
         </p>
-        <img class="intro-render" src="/production-images/container-stack-render.PNG" alt="Three container conversions stacked up">
+        <img class="intro-render" src="production-images/container-stack-render.PNG" alt="Three container conversions stacked up">
       </div>
 
       </section>
@@ -122,7 +122,7 @@
       <section id="example-projects">
 
         <div class="example-projects-heading-flexbox">
-          <img class="example-projects-logo" src="/graphics/v-logo-colour.svg" alt="ISOv8 logo mark">
+          <img class="example-projects-logo" src="graphics/v-logo-colour.svg" alt="ISOv8 logo mark">
           <h2 class="example-projects-heading">Some of Our Projects Include...</h2>
         </div>
 
@@ -162,7 +162,7 @@
       <section id="trusted-by">
 
         <div class="trusted-by-heading-flexbox">
-          <img class="trusted-by-logo" src="/graphics/v-logo-colour.svg" alt="ISOv8 logo mark">
+          <img class="trusted-by-logo" src="graphics/v-logo-colour.svg" alt="ISOv8 logo mark">
           <h2 class="trusted-by-heading">Trusted by Companies Up and Down the UK</h2>
         </div>
 
